# gekkoboot

./: .clang-format  .clang-format-ignore  .editorconfig  .gitignore  Makefile  README.md  devkitPPC.ini  devkitPPCEmu.ini  dol2ipl.py  flake.nix  ipl.ld  meson.build  meson.options  ogc.ld  ogc.patch  release.sh  shell.nix
.github/workflows/: continuous-integration-workflow.yml
buildtools/: README.md  dol2ipl.py  doltool  dolxz  meson.build  psf2c.py  qoob_injector.py
buildtools/doltool/: DolFile.cpp  DolFile.h  ElfFile.cpp  ElfFile.h  GenericFile.cpp  GenericFile.h  Types.h  UtilFuncs.cpp  UtilFuncs.h  main.cpp  meson.build
include/ogc/: system.h  time.h
include/sdcard/: gcsd.h
nix/: dkppc-rules.nix
packer/: crt0.S  link.ld  main.c  meson.build
res/: meson.build  qoob_pro_none_upgrade.elf  qoob_sx_13c_upgrade.elf  terminus-0.49.1-116b-ll2-td1.psf
source/: cli_args.c  cli_args.h  config.c  config.h  ffshim.c  ffshim.h  filesystem.c  filesystem.h  filesystem_emu.c  lwp_stub.c  main.c  shortcut.c  shortcut.h  sidestep.c  stub.c  stub.h  types.c  types.h  utils.c  utils.h  version.c.in  version.h
source/fatfs/: ff.c  ff.h  ffconf.h
source/inih/: README.md  ini.h
source/ogc/: cache_asm.S  lock_supp.c  malloc_lock.c  ogc_crt0.S  system.c  system_asm.S
stub/: link.ld  meson.build  stub.c  stub.h
subprojects/: libfat.wrap  libogc2.wrap
subprojects/packagefiles/: libogc2.patch
subprojects/packagefiles/libfat/: configure  meson.build
